# Literacy

./: .gitignore  CMakeLists.txt  QLanguageComboBox.cpp  QLanguageComboBox.h  README.md  mainwindow.cpp  mainwindow.h
